--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.0",
+    "@apollo/server": "^4.9.1",
+    "@as-integrations/next": "^2.0.1",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "cors": "^2.8.5",
+    "graphql": "^16.7.1",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
